--- a/src/GVB/Modulos/Menu/Vista/Ventana_ppal.form
+++ b/src/GVB/Modulos/Menu/Vista/Ventana_ppal.form
@@ -30,7 +30,7 @@
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
           <Image iconType="3" name="/GVB/img/maletin.png"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Empleados"/>
+        <Property name="text" type="java.lang.String" value="Usuarios"/>
         <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
           <Dimension value="[100, 23]"/>
         </Property>
